Tue Apr 22 00:07:32 CEST 2014  John Tytgat  <John.Tytgat@aaug.net>

	* signal/_signal.s (__h_sigill): Undo lr correction.
	(__h_sigbus): Likewise.
	(__h_sigsegv0): Likewise.
	(__h_sigsegv1): Likewise.
	* signal/post.c (extract_name): Use __valid_address to check incoming
	pc value. Don't return NULL but pointer to "?" when failing.
	(__write_backtrace_thread): More accurate __valid_address checking.
	Simplify extract_name calling.  Fix pc adjusting.
	* test/sys/handlers.c: Add.

Sun Mar  9 15:22:24 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* time/localtime_r.c (localtime_r): Reduce ordinals entries from 15 to
	9.
	(SWI_Territory_ConvertTimeToOrdinals): Move to...
	* incl-local/internal/os.h: ...here.
	* time/mktime.c (mktime): Drop __os_swi usage and use
	SWI_Territory_ConvertTimeToOrdinals instead.
	* unittest/test-utimes.c: Fix comment.

Sun Mar  9 02:24:41 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* common/cvttime.c (__cvt_riscos_time): Take only low byte of high
	parameter into account.  Fixes bug #249.
	* include/time.h (struct tm): Change type tm_gmtoff into long.
	* time/time.c (time): Drop byte mask for __cvt_riscos_time.

Sat Mar  8 16:11:39 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* incl-local/errno.h (mask_fs_num): Add.
	* stdio/rename.c (rename): Use mask_fs_num.
	* unix/mkdir.c (mkdir): Likewise.  Remove ADFS specific error number
	check and language dependent error string check.

Fri Jan  3 17:09:59 CET 2014  John Tytgat  <John.Tytgat@aaug.net>

	* include/wchar.h: Don't include bits/wchar2.h nor bits/wchar-ldbl.h.
	Reported by Ron <beeb@woosh.co.nz>.
	* include/features.h, include/sys/socket.h: Uniform local changes.

Sun Aug  4 22:03:30 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* stdlib/realpath (realpath): Return ENOENT if object does not exist.
	* incl-local/internal/symlinks.h: Move features.h include in
	__UNIXLIB_SYMLINKS test.
	* incl-local/internal/unix.h: Drop internal/symlinks.h include.